Adjust consumer to receive topics